--- a/.github/wrokflows/deploy.yml
+++ b/.github/wrokflows/deploy.yml
@@ -4,6 +4,9 @@ on:
       - develop
       - main
 
+env:
+  BUILD_ENV: ${{ github.ref_name == 'main' && 'production' || 'test' }}
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -27,7 +30,7 @@ jobs:
 
       - name: Build Angular app
         working-directory: app
-        run: npm run build:production
+        rrun: npm run build:${BUILD_ENV}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -41,7 +44,7 @@ jobs:
       - name: Build and push Docker image
         working-directory: app
         run: |
-          docker build -t chugague/pagerduty-angular:${{ github.ref_name }} .
+          docker build --build-arg BUILD_ENV=${BUILD_ENV} -t chugague/pagerduty-angular:${{ github.ref_name }} .
           docker push chugague/pagerduty-angular:${{ github.ref_name }}
           docker tag chugague/pagerduty-angular:${{ github.ref_name }} chugague/pagerduty-angular:latest
           docker push chugague/pagerduty-angular:latest
