--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Build Angular app
         working-directory: app
-        rrun: npm run build:${BUILD_ENV}
+        run: npm run build:${BUILD_ENV}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
