--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
           terraform_version: 1.6.6
 
       - name: Deploy with Terraform
-        working-directory: terraform/environments/${TERRAFORM_ENV}
+        working-directory: terraform/environments/${{ env.TERRAFORM_ENV }}
         run: |
           terraform init
           terraform apply -auto-approve
