--- a/app/nginx/default.conf
+++ b/app/nginx/default.conf
@@ -10,12 +10,19 @@ server {
     try_files $uri $uri/ /index.html;
   }
 
+  # Servir archivos estáticos (css, js, imágenes, fuentes)
+  location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|eot|svg)$ {
+    expires 6M;
+    access_log off;
+    add_header Cache-Control "public";
+  }
+
   # Headers de seguridad OWASP ZAP
   add_header X-Content-Type-Options "nosniff";
   add_header X-Frame-Options "DENY";
   add_header X-XSS-Protection "1; mode=block";
   add_header Referrer-Policy "strict-origin-when-cross-origin";
-  add_header Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self'; object-src 'none'; base-uri 'self';" always;
+  add_header Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; object-src 'none'; base-uri 'self';" always;
   add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
   add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
 
